Update contact info and add language proficiency
Removed phone contact information and added language proficiency details.

--- a/index.html
+++ b/index.html
@@ -303,10 +303,6 @@
                         <svg viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
                         <a href="mailto:sumit.kumar@gmail.com">sumit.kumar@gmail.com</a>
                     </div>
-                    <div>
-                        <svg viewBox="0 0 24 24"><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 1.25 0 2.45.2 3.57.57.35.13.74.04 1.02-.24l2.2-2.2z"/></svg>
-                        <a href="tel:+352691102128">+352 691102128</a>
-                    </div>
                 </div>
 
                 <h2>Links</h2>
@@ -381,6 +377,18 @@
                 <div class="edu-item">
                     <span class="edu-school">English</span>
                     <span class="edu-degree">Full Professional Proficiency</span>
+                </div>
+                <div class="edu-item">
+                    <span class="edu-school">French</span>
+                    <span class="edu-degree">A2/B1</span>
+                </div>
+                <div class="edu-item">
+                    <span class="edu-school">Luxembourgish</span>
+                    <span class="edu-degree">A1/A2</span>
+                </div>
+                <div class="edu-item">
+                    <span class="edu-school">German</span>
+                    <span class="edu-degree">A1</span>
                 </div>
             </div>
         </aside>
